Были исправлены недочеты, были добавлены javadoc, исправлено каскадное удаление